Move checkout coupon code section into summary
Passing params[:order][:coupon_code] is now deprecated so we should not have
this behavior in default frontend code.

This commit moves the coupon code application section of checkout into the
summary box, still visible in payment step only.

It also wraps the coupon code input + button into a real form so it still
works if, for some reason, JS is not working, falling back to deprecated
behavior for now.

--- a/frontend/app/views/spree/checkout/_summary.html.erb
+++ b/frontend/app/views/spree/checkout/_summary.html.erb
@@ -70,3 +70,7 @@
     </tr>
   </tbody>
 </table>
+
+<% if order.state == 'payment' %>
+  <%= render 'spree/shared/coupon_code', order: order, url: update_checkout_path(order.state) %>
+<% end %>
