--- a/backend/app/views/spree/admin/orders/confirm/_shipment_manifest.html.erb
+++ b/backend/app/views/spree/admin/orders/confirm/_shipment_manifest.html.erb
@@ -1,4 +1,4 @@
-<% shipment.manifest.each do |item| %>
+<% shipment.shipping_manifest_items.each do |item| %>
   <tr class="stock-item" data-item-quantity="<%= item.quantity %>">
     <td class="item-image">
       <%= render 'spree/admin/shared/image',
