--- a/backend/app/views/spree/admin/shared/_navigation.html.erb
+++ b/backend/app/views/spree/admin/shared/_navigation.html.erb
@@ -1,3 +1,4 @@
+<span id="admin-nav-toggle"><i class="fa fa-chevron-left fa-2x"></i></span>
 <div class="admin-nav">
   <%= render partial: 'spree/admin/shared/navigation_header' %>
   <div class="admin-nav-sticky">
