Add transistions and simplify JS

--- a/backend/app/views/spree/admin/shared/_navigation.html.erb
+++ b/backend/app/views/spree/admin/shared/_navigation.html.erb
@@ -1,6 +1,6 @@
-<span id="admin-nav-toggle"><i class="fa fa-chevron-left fa-2x"></i></span>
 <div class="admin-nav">
   <%= render partial: 'spree/admin/shared/navigation_header' %>
+  <span id="admin-nav-toggle"><i class="fa fa-angle-double-left fa-3x"></i></span>
   <div class="admin-nav-sticky">
     <%= render partial: 'spree/admin/shared/menu' %>
     <div class="admin-nav-footer">
