--- a/backend/app/assets/stylesheets/spree/backend/shared/_layout.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_layout.scss
@@ -6,6 +6,7 @@ body {
   position: relative;
   min-height: 100%;
   padding-left: $width-sidebar;
+  transition: padding 350ms linear;
 }
 
 .admin {
@@ -14,9 +15,19 @@ body {
 
 #admin-nav-toggle {
   position: absolute;
-  top: 25px;
-  margin-left: 5px;
+  top: 15px;
+  margin-left: 199px;
   cursor: pointer;
+  background-color: $color-1;
+  border: 1px solid $color-border;
+  border-left: none;
+
+  z-index: 1;
+  padding-right: 5px;
+
+  i {
+    margin-left: 5px;
+  }
 }
 
 .admin-nav {
@@ -25,10 +36,27 @@ body {
   bottom: 0;
   left: 0;
   width: $width-sidebar;
+  transform: translate3d(0, 0, 0);
+  transition: transform 350ms ease-in-out;
   @media print { display: none }
 }
 
-.admin-nav-extended { padding-left: 0; }
+#admin-nav-toggle i {
+  transform: rotate(0);
+  transition: transform 350ms linear;
+}
+
+.admin-nav-extended {
+  padding-left: 0;
+
+  .admin-nav {
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  #admin-nav-toggle i {
+    transform: rotate(180deg);
+  }
+}
 
 .content-wrapper {
   background-color: $content-wrapper-bg;
