Incorporate styling tweaks

--- a/backend/app/assets/stylesheets/spree/backend/shared/_layout.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_layout.scss
@@ -17,7 +17,8 @@ body {
   position: absolute;
   top: 15px;
   margin-left: 199px;
-  padding-right: 5px;
+  padding: 7px 0;
+  padding-right: 8px;
   z-index: 1;
   background-color: $color-1;
   border: 1px solid $color-border;
