Add a session variable to remember nav state

--- a/backend/app/assets/stylesheets/spree/backend/shared/_layout.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_layout.scss
@@ -46,7 +46,7 @@ body {
   transition: transform 350ms linear;
 }
 
-.admin-nav-extended {
+.admin-nav-hidden {
   padding-left: 0;
 
   .admin-nav {
