Style changes for navbar collapse

--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -1,4 +1,5 @@
 <div id="content-header" class="main-header" data-hook>
+  <span id="admin-nav-toggle"><i class="fa fa-angle-double-left fa-2x"></i></span>
   <%= render_admin_breadcrumbs %>
 
   <% if content_for?(:page_actions) %>
