--- a/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
@@ -24,7 +24,7 @@ $padding-y-navbar-submenu: 9px;
   }
 
   .tab-with-icon .text{
-    opacity: 0;
+    display:none;
   }
 
   .admin-login-nav a{
@@ -210,7 +210,6 @@ nav.menu {
     font-family: $font-family-base;
     -webkit-font-smoothing: auto;
     -moz-osx-font-smoothing: auto;
-    transition: opacity $sidebar-transition;
   }
 
   .admin-subnav {
