--- a/backend/app/assets/stylesheets/spree/backend/globals/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/globals/_variables.scss
@@ -61,6 +61,15 @@ $color-tab-active:              $color-primary !default;
 $color-tab-active-bg:           $color-white !default;
 $color-tab-active-border:       $color-white !default;
 
+// Sidebar
+//--------------------------------------------------------------
+$width-sidebar:                  200px !default;
+$width-sidebar-flyout:           225px !default;
+$width-sidebar-collapsed:        52px !default;
+$border-sidebar:                 1px solid $color-sidebar-border !default;
+
+$sidebar-transition: opacity .4s cubic-bezier(.5,.32,.01,1), transform .4s cubic-bezier(.5,.32,.01,1), width .4s cubic-bezier(.5,.32,.01,1);
+
 // Basic flash colors
 @include bs-deprecated-variable("color-success", "brand-success");
 $color-success:                 $color-green !default;
