--- a/backend/app/assets/stylesheets/spree/backend/_bootstrap_custom.scss
+++ b/backend/app/assets/stylesheets/spree/backend/_bootstrap_custom.scss
@@ -85,6 +85,8 @@ $dropdown-link-hover-bg:         $color-primary !default;
 
 $breadcrumb-bg:                 transparent !default;
 $breadcrumb-active-color:       $color-primary !default;
+$breadcrumb-padding-y:          .75rem !default;
+$breadcrumb-padding-x:          0 !default;
 
 // Popover
 
