--- a/backend/app/assets/stylesheets/spree/backend/shared/_header.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_header.scss
@@ -2,9 +2,13 @@
   display: flex;
   align-items: center;
   background-color: $color-header-bg;
-  padding: 15px $grid-gutter-width 15px 0;
+  padding: ($grid-gutter-width / 2) $grid-gutter-width;
   border-bottom: 1px solid $color-border;
   height: $main-header-height;
+  
+  .admin-nav-hidden & {
+    margin-left: ($width-sidebar - $width-sidebar-collapsed);
+  }
 
   @media print { display: none }
 }
