--- a/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
@@ -305,7 +305,7 @@ nav.menu {
   margin: 1em;
   position: relative;
   
-  &:before {
+  &::after {
     content: "\f0ac";
     font-family: "FontAwesome";
     position: absolute;
@@ -314,6 +314,7 @@ nav.menu {
     padding: .5rem 0 .5rem .25rem;
     opacity: 0;
     transition: opacity .4s cubic-bezier(.5,.32,.01,1);
+    z-index: -1;
   }
   
   .admin-nav-hidden & {
@@ -323,13 +324,17 @@ nav.menu {
       background-size: 8px 9px;
       border: 0;
       opacity: .6;
+      position: relative;
+      overflow: hidden;
+      text-indent: 1rem;
+      z-index: 1;
       
       &:focus {
         box-shadow: none;
       }
     }
     
-    &::before {
+    &::after {
       opacity: 1;
     }
   }
