Display flash messages correctly when sidebar is closed
Flash messages wrapper element is currently being cut at the
width of the standard sidebar, even when it is collapsed.

This commit allows the wrapper to be displayed correctly,
based on the current size of the sidebar.

--- a/backend/app/assets/stylesheets/spree/backend/components/_messages.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_messages.scss
@@ -30,6 +30,10 @@
   left: $width-sidebar;
   right: 0;
   z-index: 1000;
+
+  .admin-nav-hidden & {
+    left: $width-sidebar-collapsed;
+  }
 }
 
 .flash {
