Set raise_with_invalid_currency to false for new app
This ensures that the DummyApp that we use for specs and new
applications will use the new default behavior, while preserving
the old behavior for existing applications that are just upgrading.

Setting this new default for the DummyApp allows us to restore a
pending spec that was skipped for the inconsistent raise behavior
that we want to deprecate.

--- a/core/lib/generators/spree/install/templates/config/initializers/spree.rb.tt
+++ b/core/lib/generators/spree/install/templates/config/initializers/spree.rb.tt
@@ -22,6 +22,8 @@ Spree.config do |config|
   config.image_attachment_module = 'Spree::Image::PaperclipAttachment'
   config.taxon_attachment_module = 'Spree::Taxon::PaperclipAttachment'
 
+  # Defaults
+  config.raise_with_invalid_currency = false
 
   # Permission Sets:
 
